Changed message to ID instead of class

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ button#reset:active {
 
 /* Main board */
 
-.message {
+#message {
     padding: 20px 0;
     font-size: 50px;
     text-align: center;
