--- a/style.css
+++ b/style.css
@@ -152,6 +152,7 @@ button#reset:active {
 
 #rematch {
     position: inherit;
+    display: none;
     border-radius: 15px;
     height: 50px;
     width: auto;
