Fixed rematch button to show on draw

--- a/style.css
+++ b/style.css
@@ -162,4 +162,5 @@ button#reset:active {
     background-color: rgb(43, 59, 100);
     font-size: 30px;
     font-weight: bold;
+    cursor: pointer;
 }
